--- a/dev-finances/styles/style.css
+++ b/dev-finances/styles/style.css
@@ -13,12 +13,32 @@
   --logo-color: #fff;
   --subtitle-color: #363f5f;
   --card-background: #49aa26;
+  --green: #49aa26;
+  --light-green: #3dd705;
+  --red: #e92929;
   --color-table: #969cb3;
+}
+
+html{
+  font-size: 93.75%;
 }
 
 body{
   background-color: var(--body-background);
   font-family: var(--major-font);
+}
+
+/* invisível no front end mas visível para os leitores de tela melhorando a acessibilidade */
+.sr-only{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 /* ========= TITLES ========= */
@@ -30,17 +50,62 @@ h2{
   font-weight: 400;
 }
 
+/* ========= LINKS & BUTTONS ========= */
+
+a{
+  color: var(--green);
+  text-decoration: none;
+}
+
+.button.new{
+  display: inline-block;
+  margin-bottom: .8rem;
+}
+
+a:hover{
+  color: var(--light-green);
+}
+
+button{
+  width: 100%;
+  height: 50px;
+  border: none;
+  color: #fff;
+  background-color: var(--green);
+  border-radius: .25rem;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: var(--light-green);
+}
+
+.button.new{
+  display: inline-block;
+  margin-bottom: .8rem;
+}
+
+.button.cancel{
+  color: var(--red);
+  border: 2px var(--red) solid;
+  border-radius: .25rem;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: .6;
+}
+
+.button.cancel:hover{
+  opacity: 1;
+}
+
 /* ========= HEADER ========= */
 
 header{
   background-color: var(--header-background);
   padding: 2rem 0 10rem;
   text-align: center;
-}
-
-#logo{
-  color: var(--logo-color);
-  font-weight: 100;
 }
 
 /* ========= CONTAINER ========= */
@@ -74,6 +139,9 @@ header{
 .card h3{
   font-weight: 400;
   font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card p{
@@ -89,6 +157,12 @@ header{
 
 /* ========= TABLE ========= */
 
+#transaction{
+  display: block;
+  overflow-x: auto;
+  width: 100%;
+}
+
 #data-table{
   width: 100%;
   border-spacing: 0 .5rem;
@@ -98,6 +172,11 @@ header{
 table thead tr th:first-child,
 table tbody tr td:first-child{
   border-radius: .25rem 0 0 .25rem;
+}
+
+table thead tr th:last-child,
+table tbody tr td:last-child{
+  border-radius: 0 .25rem .25rem 0;
 }
 
 table thead th{
@@ -121,7 +200,7 @@ table td{
 }
 
 .description{
-  color: var(--subtitle-color);
+  color: #363f5f;
 }
 
 .income{
@@ -129,7 +208,68 @@ table td{
 }
 
 .expense{
-  color: #e92929;
+  color: var(--red);
+}
+
+/* ========= MODAL ========= */
+
+.modal-overlay{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .7);
+  position: fixed;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal-overlay.active{
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal{
+  background-color: #f0f2f5;
+  padding: 2.4rem;
+}
+
+/* ========= FORM ========= */
+
+#form{
+  max-width: 500px;
+}
+
+#form h2{
+  margin-top: 0;
+}
+
+#form form input{
+  border: none;
+  border-radius: .2rem;
+  padding: .8rem;
+  width: 100%;
+}
+
+.input-group{
+  margin-top: .8rem;
+}
+
+.input-group small{
+  opacity: .4;
+}
+
+.input-group.actions{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button{
+  width: 48%;
 }
 
 /* ========= FOOTER ========= */
@@ -139,4 +279,18 @@ footer{
   padding: 4rem 0 2rem;
   color: var(--subtitle-color);
   opacity: .6;
+}
+
+/* ========= RESPONSIVE ========= */
+
+@media(min-width: 800px){
+  html{
+    font-size: 87.5%;
+  }
+
+  #balance{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
 }
